doc: Add CircleCI badge to README

--- a/README.org
+++ b/README.org
@@ -2,6 +2,9 @@
 
 [[./images/organ.png]]
 
+Tests (CircleCI): [[https://circleci.com/gh/twohundredok/organ.svg?style=svg]]
+
+
 An implementation of Org mode without the dependency of Emacs - built
 for mobile and desktop browsers.
 
