--- a/README.org
+++ b/README.org
@@ -4,6 +4,9 @@
 
 Tests (CircleCI): [[https://circleci.com/gh/twohundredok/organ.svg?style=svg]]
 
+Maintainability (Codeclimate): [[https://api.codeclimate.com/v1/badges/a91b4cc0fee4c8ac1218/maintainability.png]]
+
+
 An implementation of Org mode without the dependency of Emacs - built
 for mobile and desktop browsers.
 
