--- a/README.org
+++ b/README.org
@@ -2,11 +2,10 @@
 
 [[./images/organ.png]]
 
-Tests (CircleCI): [[https://circleci.com/gh/twohundredok/organ.svg?style=svg]]
+Tests (CircleCI): [[https://circleci.com/gh/twohundredok/organ][https://circleci.com/gh/twohundredok/organ.svg?style=svg]]
 
-Maintainability (Codeclimate): [[https://api.codeclimate.com/v1/badges/a91b4cc0fee4c8ac1218/maintainability.png]]
+Maintainability (Codeclimate): [[https://codeclimate.com/github/twohundredok/organ/maintainability][https://api.codeclimate.com/v1/badges/a91b4cc0fee4c8ac1218/maintainability.png]]
 
-#+ATTR_HTML: title="Greenkeeper badge"
 Dependency management: [[https://greenkeeper.io/][file:https://badges.greenkeeper.io/twohundredok/organ.svg]]
 
 An implementation of Org mode without the dependency of Emacs - built
